plugins {
    id 'org.springframework.boot' version '2.2.12.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'
    id 'org.sonarqube' version '2.7'
    id 'jacoco'
}

group = 'br.gov.es'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
    mavenCentral()
    maven {
        url "https://repo.spring.io/plugins-release/"
    }
    maven {
        url "https://jasperreports.sourceforge.net/maven2/"
    }
}

dependencies {
    implementation 'org.springframework.data:spring-data-neo4j:5.2.13.RELEASE'
    implementation 'org.neo4j.driver:neo4j-java-driver:4.4.12'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
    implementation 'org.modelmapper:modelmapper:2.3.6'
    implementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'org.apache.httpcomponents:httpclient:4.5.12'
    implementation 'org.json:json:20190722'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'io.jsonwebtoken:jjwt:0.7.0'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'org.zalando:logbook-spring-boot-starter:2.14.0'

    implementation 'org.neo4j:neo4j-jdbc-bolt:4.0.1'

    implementation 'net.sf.jasperreports:jasperreports:6.17.0'
    implementation 'com.lowagie:itext:2.1.7'

    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
    implementation 'io.springfox:springfox-bean-validators:2.9.2'
    implementation 'org.springframework.boot:spring-boot-starter-test'

}
